<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.ttic.hj.heroesmanager.activities.DetailsActivity">
    <ImageView
        android:id="@+id/iv_is_masked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/super_hero"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"/>
    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[TEXT]"
        android:textSize="25dp"
        android:layout_toRightOf="@id/iv_is_masked"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="@id/iv_is_masked"/>
    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_is_masked"
        android:layout_alignBottom="@id/iv_is_masked"
        android:isIndicator="true"
        android:numStars="5"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"/>
    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_below="@id/iv_is_masked"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:textAlignment="viewStart"
        />
    <TextView
        android:id="@+id/tv_first_name_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[TEXT]"
        android:layout_below="@id/iv_is_masked"
        android:layout_toRightOf="@+id/tv_first_release_date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_below="@id/tv_first_name"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:textAlignment="viewStart"
        />
    <TextView
        android:id="@+id/tv_last_name_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[TEXT]"
        android:layout_below="@id/tv_first_name_hero"
        android:layout_toRightOf="@+id/tv_first_release_date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@id/tv_last_name"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:textAlignment="viewStart"
        />
    <TextView
        android:id="@+id/tv_city_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[TEXT]"
        android:layout_below="@id/tv_last_name_hero"
        android:layout_toRightOf="@+id/tv_first_release_date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:id="@+id/tv_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        android:layout_below="@id/tv_city"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:textAlignment="viewStart"
        />
    <TextView
        android:id="@+id/tv_origin_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[TEXT]"
        android:layout_below="@id/tv_city_hero"
        android:layout_toRightOf="@+id/tv_first_release_date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:id="@+id/tv_first_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_release_date"
        android:layout_below="@id/tv_origin"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:textAlignment="viewStart"
        />
    <TextView
        android:id="@+id/tv_first_release_date_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="[TEXT]"
        android:layout_below="@id/tv_origin_hero"
        android:layout_toRightOf="@+id/tv_first_release_date"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        >
        <Button
            android:id="@+id/btn_update_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_hero"
            android:layout_margin="25dp"
            />
        <Button
            android:id="@+id/btn_delete_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_hero"
            android:layout_margin="25dp"/>
    </LinearLayout>


</RelativeLayout>
